# htmx2

./: README.md
examples/axum-1/: Cargo.toml  tailwind.config.js  tailwind.css
examples/axum-1/pub/: styles.css
examples/axum-1/src/: auth.rs  main.rs  page.rs  pages.rs
examples/axum-1/src/pages/: home.rs  sign_in.rs
htmx2/: Cargo.toml
htmx2/src/: axum_support.rs  cookie.rs  lib.rs  maud_support.rs  utils.rs
htmx2_macros/: Cargo.toml
htmx2_macros/src/: lib.rs
