[package]
name = "axum1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
inventory = "0.3.13"
maud = { version = "0.25.0", features = ["axum"] }
quote = "1.0.33"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_urlencoded = "0.7.1"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["fs"] }

htmx2 = { path = "../../htmx2", features = ["axum", "maud"] }
